# coprocessor

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.sandcastle/: .env.example  .gitignore  CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.mts  plan-prompt.md  resolve-conflicts-prompt.md  review-prompt.md
.sandcastle/lib/: agents.mts  config.mts  git.mts  github-client.mts  review-cache.mts  review-output.mts  workflow.mts  worktree-repair.mts
crates/ciphertext-binding/: Cargo.toml
crates/ciphertext-binding/docs/: cbor-spike-decision.md
crates/ciphertext-binding/src/: aad.rs  aad_body.rs  aad_codec.rs  cbor.rs  envelope.rs  identifiers.rs  lib.rs
crates/ciphertext-binding/tests/: aad_decode_errors.rs  aad_round_trip.rs  canonical_system_ciphertext_round_trip.rs  envelope_decode_errors.rs  envelope_round_trip.rs
crates/coprocessor-host/: Cargo.toml
crates/coprocessor-host/src/: chain_ingestion.rs  config.rs  construction.rs  dependency.rs  derived_receipt.rs  host_lifecycle.rs  internal_api.rs  lib.rs  lifecycle.rs  main.rs  resolution.rs  resolution_intent.rs  resolution_scheduler.rs  resolve_enclave.rs  to_enclave_transformation.rs
crates/coprocessor-host/tests/: binary_smoke.rs  chain_event_ingestion.rs  end_to_end_failure.rs  end_to_end_happy_path.rs  end_to_end_reorg_restart.rs  host_lifecycle.rs  host_privacy.rs  internal_api_handle_state.rs  internal_api_resolve_handle.rs  internal_api_resolve_handle_dedup.rs  nitro_resolution_parity.rs  resolution_failure_retry.rs  resolution_scheduler_claim.rs  resolve_derived_handle.rs  restart_recovery.rs  transform_resolution_task_inputs.rs
crates/enclave-runtime/: Cargo.toml
crates/enclave-runtime/src/: lib.rs  local.rs  operation.rs  result_packaging.rs  sealing.rs  validation.rs
crates/enclave-runtime/tests/: enclave_runtime_contract.rs  local_enclave_runtime.rs
crates/handle-graph-core/: Cargo.toml
crates/handle-graph-core/src/: chain_log_decoder.rs  ingestion.rs  lib.rs  materialization.rs  operations.rs  orphan.rs  persistence.rs  plaintext_materialization.rs  query.rs  types.rs
crates/handle-graph-core/tests/: canonical_and_audit_queries.rs  chain_event_decoder.rs  derived_handle_validation.rs  end_to_end_scenarios.rs  handle_record_persistence.rs  imported_handle_ingestion.rs  materialize_derived_handle.rs  orphan_discard_cascade.rs  persistence_privacy.rs  (+3 more)
crates/mpc/: Cargo.toml
crates/mpc-client/: Cargo.toml
crates/mpc-client/src/: lib.rs
crates/mpc-client/tests/: request_to_enclave_transformation.rs
crates/mpc-client/tests/common/: mod.rs
crates/mpc-config/: Cargo.toml
crates/mpc/src/: lib.rs
crates/mpc/src/config/: compat.rs  config.rs  dto.rs  error.rs  mod.rs  serde_mapping.rs  source.rs  validation.rs
crates/mpc/tests/: error_display_privacy.rs  load_mpc_public_config.rs  request_to_enclave_transformation.rs
crates/mpc/tests/config_common/: mod.rs
crates/mpc/tests/to_enclave_common/: mod.rs
crates/nitro-enclave/: Cargo.toml
crates/transport-json/: Cargo.toml
crates/wire-codec/: Cargo.toml
crates/wire-codec/src/: base64_codec.rs  hex_codec.rs  hex_identifier.rs  json_codec.rs  lib.rs
crates/wire-codec/tests/: chain_event_ref_round_trip.rs  ciphertext_round_trip.rs  error_display_privacy.rs  hex_round_trip.rs  parse_error_surface.rs
crates/wire-codec/tests/common/: mod.rs
docs/: cbor-spike-decision.md
docs/adr/: 0001-target-aws-nitro-enclaves-first.md  0002-tombstone-orphan-derived-handle-records.md  0003-use-spec-repo-as-protocol-source-of-truth.md  0004-do-not-durably-persist-enclave-ciphertexts.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
(+31 files in other folders)
