[workspace]
members = [
    "crates/coprocessor-host",
    "crates/handle-graph-core",
    "crates/ciphertext-binding",
    "crates/transport-json",
    "crates/enclave-runtime",
    "crates/mpc-config",
    "crates/mpc-client",
    "crates/nitro-enclave",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
alloy-sol-types = "1"
alloy-primitives = "1"
