[workspace]
members = [
    "crates/coprocessor-host",
    "crates/handle-graph-core",
    "crates/ciphertext-binding",
    "crates/wire-codec",
    "crates/enclave-runtime",
    "crates/mpc",
    "crates/nitro-enclave",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
alloy-sol-types = { version = "1", default-features = false, features = ["std"] }
alloy-primitives = { version = "1", default-features = false, features = ["std"] }
