[package]
name = "coprocessor-mpc-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "coprocessor_mpc_client"
path = "src/lib.rs"

[dependencies]
coprocessor-ciphertext-binding = { path = "../ciphertext-binding" }
coprocessor-handle-graph-core = { path = "../handle-graph-core" }
thiserror.workspace = true
