[package]
name = "coprocessor-mpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "coprocessor_mpc"
path = "src/lib.rs"

[dependencies]
coprocessor-wire-codec = { path = "../wire-codec" }
coprocessor-ciphertext-binding = { path = "../ciphertext-binding" }
coprocessor-handle-graph-core = { path = "../handle-graph-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
