[package]
name = "coprocessor-wire-codec"
version = "0.1.0"
edition = "2021"

[lib]
name = "coprocessor_wire_codec"
path = "src/lib.rs"

[dependencies]
coprocessor-ciphertext-binding = { path = "../ciphertext-binding" }
coprocessor-handle-graph-core = { path = "../handle-graph-core" }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
